--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,22 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* --------------------- */
 
-span{
-    font-size: 20px;
+/* Header */
+header{
+    height: 30vh;
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: space-evenly;
+
+    background-color: aliceblue;
 }
-
-/* -------Ventana emergente - Modal ------------*/
-
-/* Base */
-
-/* Utilizo este pseudoelemento para modificar la opacidad de la capa oscura
-entre el popup y el navegador. */
-#modal::backdrop{
-background-color: rgba(0, 0, 0, 0.55);
-}
-#modal{
-    max-width: 50ch;
-    margin: auto;
-    padding: 15px;
-}
-/* Fin modal */
-
-
-/*------------ Formulario --------------*/
-/* Titulos */
-.containerApp div h2{
+div h3{
     font-size: 1.5rem;
 
     color: rgb(52, 139, 238);
@@ -37,7 +28,52 @@ background-color: rgba(0, 0, 0, 0.55);
 
     padding: 10px;
 }
-.containerApp .containerApp-form div h3{
+/* Header fecha */
+.date{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    justify-content: center;
+    align-items: flex-start;
+}
+#dateNumber{
+    font-size: 60px;
+    color: brown;
+}
+#dateMonth{
+    font-size: 34px;
+    color: rgb(52, 139, 238);
+}
+#dateYear{
+    font-size: 30px;
+    color: rgb(52, 139, 238);
+}
+#dateText{
+    color: rgb(52, 139, 238);
+}
+/* -------------------------------- */
+
+
+/* -------Ventana emergente - Modal ------------*/
+/* Base */
+/* Utilizo este pseudoelemento para modificar la opacidad de la capa oscura
+entre el popup y el navegador. */
+#modal::backdrop{
+background-color: rgba(0, 0, 0, 0.55);
+}
+#modal{
+    max-width: 50ch;
+    padding: 15px;
+}
+/* --------------------------------------*/
+
+/*------------ Formulario --------------*/
+span{
+    font-size: 20px;
+}
+/* Titulos */
+.containerApp div h2{
     font-size: 1.5rem;
 
     color: rgb(52, 139, 238);
@@ -62,6 +98,7 @@ background-color: rgba(0, 0, 0, 0.55);
     align-items: center;
 
     margin: auto;
+    width: 100%;
 
 }
 .containerApp{
@@ -70,6 +107,7 @@ background-color: rgba(0, 0, 0, 0.55);
     align-items: center;
 
     margin: auto;
+    width: 100%;
 }
 .containerApp-form{
     display: flex;
@@ -97,16 +135,14 @@ background-color: rgba(0, 0, 0, 0.55);
     border-left: 5px solid rgb(52, 139, 238);
     border-radius: 5px;
     background-color: whitesmoke;
-
-
 }
 .form input:focus{
     transition: all 300ms ease;
     background-color: rgba(52, 139, 238, 0.2);
 }
-/* Boton enviar */
+/* Boton enviar y eliminar */
 #btnEnviar{
-border: none;
+    border: none;
 
     background-color: rgb(52, 139, 238);
     color: white;
@@ -118,6 +154,16 @@ border: none;
     transform: scale(1.2,1.2);
     transition: all 300ms ease;
 }
+input[name="delete"]{
+    border: none;
+    border-radius: 4px;
+
+    padding: 5px;
+    
+    background-color: rgb(238, 52, 52);
+    color: white;
+}
+
 /* ------------------------------------------------- */
 
 /* Alertas */
@@ -139,18 +185,25 @@ border: none;
 /* -------------------------------- */
 
 /* Lista de pedidos */
-
-.productList{
+#productList{
     width: 100%;
+    height: 70vh;
 
     font-size: 15px;
-    background-color: rgba(220, 220, 220, 0.63);
 }
-.productList div div div{
+#productList .productList div{
+    background-color: aliceblue;
+
+    margin: 10px auto;
+}
+
+#productList .productList div div{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 
     justify-content: space-between;
     align-items: flex-start;
+
+    padding-left: 1rem;
 }
